kubernetes/apps/pihole/manifest/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-v6
  namespace: pihole-v6
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pihole-0.yuriy-lab.cloud
    - pihole-1.yuriy-lab.cloud
    secretName: pihole-v6-tls
  rules:
    - host: pihole-0.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-v6-0-svc
                port:
                  number: 80
    - host: pihole-1.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-v6-1-svc
                port:
                  number: 80
